SFA01Shared/src/objects/Sales_Target_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Target Revenues</relationshipLabel>
        <relationshipName>Sales_Target_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOB_Vertical_Calc__c</fullName>
        <formula>IF(RecordType.Name = &quot;User&quot; , TEXT( User__r.LOB_Vertical__c),  TEXT( Vertical_LOB__c ))</formula>
        <label>LOB Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_LOB_Calc__c</fullName>
        <formula>IF(RecordType.Name = &quot;User&quot; , TEXT(User__r.Line_of_Business_LOB__c),  TEXT(Line_of_Business_LOB__c))</formula>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_LOB__c</fullName>
        <label>Line of Business (LOB)</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Target Revenues</relationshipLabel>
        <relationshipName>Sales_Target_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Target_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vertical_LOB__c</fullName>
        <label>Vertical LOB</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Service Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sales Target Revenue</label>
    <listViews>
        <fullName>Account</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>Target_Revenue__c</columns>
        <columns>Quarter__c</columns>
        <columns>Line_of_Business_LOB_Calc__c</columns>
        <columns>LOB_Vertical_Calc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Target_Revenue__c.Account</value>
        </filters>
        <label>Account</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>Product__c</columns>
        <columns>User__c</columns>
        <columns>Target_Revenue__c</columns>
        <columns>Quarter__c</columns>
        <columns>Year__c</columns>
        <columns>Line_of_Business_LOB_Calc__c</columns>
        <columns>LOB_Vertical_Calc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Government_Defense</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>Product__c</columns>
        <columns>User__c</columns>
        <columns>Target_Revenue__c</columns>
        <columns>Quarter__c</columns>
        <columns>Line_of_Business_LOB_Calc__c</columns>
        <columns>LOB_Vertical_Calc__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business_LOB_Calc__c</field>
            <operation>equals</operation>
            <value>Government</value>
        </filters>
        <filters>
            <field>LOB_Vertical_Calc__c</field>
            <operation>equals</operation>
            <value>Defense</value>
        </filters>
        <label>Government - Defense</label>
    </listViews>
    <listViews>
        <fullName>Government_Health</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>Product__c</columns>
        <columns>User__c</columns>
        <columns>Target_Revenue__c</columns>
        <columns>Quarter__c</columns>
        <columns>Line_of_Business_LOB_Calc__c</columns>
        <columns>LOB_Vertical_Calc__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business_LOB_Calc__c</field>
            <operation>equals</operation>
            <value>Government</value>
        </filters>
        <filters>
            <field>LOB_Vertical_Calc__c</field>
            <operation>equals</operation>
            <value>Health</value>
        </filters>
        <label>Government - Health</label>
    </listViews>
    <listViews>
        <fullName>LOB_Enterprise</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>Product__c</columns>
        <columns>User__c</columns>
        <columns>Target_Revenue__c</columns>
        <columns>Quarter__c</columns>
        <columns>Line_of_Business_LOB_Calc__c</columns>
        <columns>LOB_Vertical_Calc__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business_LOB_Calc__c</field>
            <operation>equals</operation>
            <value>Enterprise</value>
        </filters>
        <label>LOB - Enterprise</label>
    </listViews>
    <listViews>
        <fullName>LOB_Government</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>Product__c</columns>
        <columns>User__c</columns>
        <columns>Target_Revenue__c</columns>
        <columns>Quarter__c</columns>
        <columns>Line_of_Business_LOB_Calc__c</columns>
        <columns>LOB_Vertical_Calc__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business_LOB_Calc__c</field>
            <operation>equals</operation>
            <value>Government</value>
        </filters>
        <label>LOB - Government</label>
    </listViews>
    <listViews>
        <fullName>Product</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Target_Revenue__c</columns>
        <columns>Quarter__c</columns>
        <columns>Line_of_Business_LOB_Calc__c</columns>
        <columns>LOB_Vertical_Calc__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Target_Revenue__c.Product</value>
        </filters>
        <label>Product</label>
    </listViews>
    <listViews>
        <fullName>User</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>User__c</columns>
        <columns>Target_Revenue__c</columns>
        <columns>Quarter__c</columns>
        <columns>Line_of_Business_LOB_Calc__c</columns>
        <columns>LOB_Vertical_Calc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Target_Revenue__c.User</value>
        </filters>
        <label>User</label>
    </listViews>
    <nameField>
        <displayFormat>STR-{000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Target Revenue</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOB</fullName>
        <active>true</active>
        <label>LOB</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOB_Vertical</fullName>
        <active>true</active>
        <label>LOB Vertical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>User</fullName>
        <active>true</active>
        <label>User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>